--- a/src/test/js/index.html
+++ b/src/test/js/index.html
@@ -1,8 +1,11 @@
 <html>
 	<head>
+		<script>
+			AUTOBAHN_DEBUG = true;
+		</script>
 		<script src="https://autobahn.s3.amazonaws.com/autobahnjs/latest/autobahn.js"></script>
 		<script>
-			var AUTOBAHN_DEBUG = true;
+			
 			var connection = new autobahn.Connection({
 		         url: 'ws://127.0.0.1:9000/',
 		         realm: 'realm1'
